--- a/Diagnosis.App/MainWindow.xaml
+++ b/Diagnosis.App/MainWindow.xaml
@@ -9,7 +9,7 @@
         DataContext="{DynamicResource vm}"        
         x:Class="Diagnosis.App.MainWindow"
         x:Name="root"
-        Title="MainWindow" Height="450" Width="600">
+        Title="MainWindow" Height="450" Width="650">
     <Window.Resources>
         <vm:MainWindowViewModel x:Key="vm" />
     </Window.Resources>
@@ -31,19 +31,30 @@
 				HorizontalAlignment="Center" Content="Приём" />
 
             <Menu HorizontalAlignment="Right">
+                <MenuItem Header="Редактировать" >
+                    <MenuItem Header="Симптомы" Command="{Binding EditSymptomsDirectoryCommand}"/>
+                    <MenuItem Header="Диагнозы" Command="{Binding EditDiagnosisDirectoryCommand}"/>
+                </MenuItem>
                 <MenuItem Header="Выйти"
 					Command="{Binding LogoutCommand}" />
             </Menu>
         </Grid>
 
-        <Grid Grid.Row="1">
+        <Grid Grid.Row="1" x:Name="workbench">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
+            
+            <controls:FullTree x:Name="directory"
+                               DataContext="{Binding DirectoryVM}"
+                               Visibility="{Binding DataContext.IsDirectoryEditing, Converter={StaticResource BooleanToVisibilityConverter}, ElementName=root}"
+                               Grid.Column="1"
+                               Margin="10"/>
 
             <screen:Card x:Name="card"
                          DataContext="{Binding CardVM}"
+                         Visibility="{Binding DataContext.IsDirectoryEditing, Converter={StaticResource NegBooleanToVisibilityConverter}, ElementName=root}"
                          Grid.Column="1"
                          Margin="10" />
 
