--- a/Diagnosis.App/Screens/Card.xaml
+++ b/Diagnosis.App/Screens/Card.xaml
@@ -66,7 +66,7 @@
             </TabItem>
             <TabItem Header="Курсы">
                 <DockPanel>
-                    <Grid>
+                    <Grid Margin="10,10,0,10">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="auto" />
                             <RowDefinition Height="*" />
@@ -77,6 +77,7 @@
 
                         <ListView ItemsSource="{Binding CoursesManager.Courses}"
                                   SelectedItem="{Binding CoursesManager.SelectedCourse}"
+                                  Style="{StaticResource list}"
                                   Grid.Row="2"
                                   SelectionMode="Single">
                             <ListView.InputBindings>
@@ -95,7 +96,8 @@
                         </ListView>
                     </Grid>
 
-                    <card:Appointment DataContext="{Binding CoursesManager.SelectedCourse.SelectedAppointment}" />
+                    <card:Appointment DataContext="{Binding CoursesManager.SelectedCourse.SelectedAppointment}" 
+                                      Margin="10"/>
                 </DockPanel>
             </TabItem>
         </TabControl>
