--- a/Diagnosis.App/App.xaml
+++ b/Diagnosis.App/App.xaml
@@ -10,7 +10,7 @@
         <conv:NegBooleanToVisibilityConverter x:Key="NegBooleanToVisibilityConverter" />
         <conv:NegateConverter x:Key="NegateBoolean" />
         <conv:CountToVisibility x:Key="CountToVisibility" />
-        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+        <conv:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
 
         <Style TargetType="TextBlock" x:Key="ScreenTitle">
             <Setter Property="FontSize" Value="24"/>
@@ -27,6 +27,10 @@
                     <Thickness Left="5"/>
                 </Setter.Value>
             </Setter>
+        </Style>
+        
+        <Style TargetType="ListView" x:Key="list">
+            <Setter Property="BorderThickness" Value="0" />
         </Style>
     </Application.Resources>
 </Application>
