--- a/Diagnosis.App/Screens/Card.xaml
+++ b/Diagnosis.App/Screens/Card.xaml
@@ -36,7 +36,7 @@
                 </TextBlock>
             </TextBlock>
             <StackPanel Grid.Column="1">
-                <Button Command="{Binding CommitCommand}">Сохранить</Button>
+                <Button Command="{Binding Editable.CommitCommand}">Сохранить</Button>
             </StackPanel>
         </Grid>
 
