--- a/Diagnosis.App/Controls/Card/Course.xaml
+++ b/Diagnosis.App/Controls/Card/Course.xaml
@@ -76,6 +76,8 @@
 
         <Button Grid.Column="1"
                 Grid.Row="2"
-                Command="{Binding AddAppointmentCommand}">Новый осмотр</Button>
+                Command="{Binding AddAppointmentCommand}"
+                Visibility="{Binding IsEnded, Converter={StaticResource NegBooleanToVisibilityConverter}}">
+            Новый осмотр</Button>
     </Grid>
 </UserControl>
