--- a/Diagnosis.App/Controls/Directory/TileItem.xaml
+++ b/Diagnosis.App/Controls/Directory/TileItem.xaml
@@ -7,7 +7,8 @@
              xmlns:Converters="clr-namespace:Diagnosis.App.Converters"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300"
+             x:Name="tileItem"
+             d:DesignHeight="300" d:DesignWidth="300" LostFocus="tileItem_LostFocus"
 >
     <UserControl.Resources>
         <Converters:BoolToCenterAligmentConverter x:Key="BoolToCenterAligmentConverter" />
@@ -100,7 +101,7 @@
             <controls:FloatSearch x:Name="search"
                         Grid.Column="0"
                         Grid.ColumnSpan="2"
-                        Visibility="{Binding DataContext.Search.IsSearchActive, ElementName=root, Converter={StaticResource BooleanToVisibilityConverter}}"
+                        Visibility="{Binding DataContext.Search.IsSearchActive, ElementName=root, Converter={StaticResource BooleanToVisibilityConverter}, Mode=TwoWay}"
                         DataContext="{Binding Search}">
                 <controls:FloatSearch.InputBindings>
                     <KeyBinding Key="Escape" Command="{Binding DataContext.Search.ToggleSearchCommand, ElementName=root}"></KeyBinding>
