AgePicker works with zero values

--- a/Diagnosis.App/Controls/Forms/ComboBoxDatePicker.xaml
+++ b/Diagnosis.App/Controls/Forms/ComboBoxDatePicker.xaml
@@ -18,6 +18,7 @@
             </Style>
         </StackPanel.Resources>
         <ComboBox x:Name="comboYears"
+            Width="50"
 			SelectionChanged="comboYears_SelectionChanged"
 			IsEditable="True"
 			SelectedValue="{Binding Year, Mode=TwoWay, ElementName=root}" />
