--- a/Diagnosis.App/Controls/Forms/AgePicker.xaml
+++ b/Diagnosis.App/Controls/Forms/AgePicker.xaml
@@ -17,7 +17,7 @@
                                      Month="{Binding BirthMonth, Mode=TwoWay}"
                                      Day="{Binding BirthDay, Mode=TwoWay}" />
 
-        <TextBox Text="{Binding Age, Mode=TwoWay}" Width="50" Margin="20,0,5,0" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" IsTabStop="False">
+        <TextBox Text="{Binding Age, Mode=TwoWay, TargetNullValue=''}" Width="50" Margin="20,0,5,0" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" IsTabStop="False">
             <controls:WatermarkService.Watermark>
                 <TextBlock Style="{StaticResource watermark}">Возраст</TextBlock>
             </controls:WatermarkService.Watermark>
